--- a/templates/match.html
+++ b/templates/match.html
@@ -6,28 +6,28 @@
 {% for match in matchs %}
 <li>
     <ul>
-        <li>match.date</li>
+        <li>{{match.date}}</li>
         
         <li>
-        match.team1.get_team_name()
+        {{match.team1.get_team_name()}}
         <figure>
             <img>
-            <figcaption>match.team1.get_player1_name()</figcaption>
+            <figcaption>{{match.team1.get_player1_name()}}</figcaption>
             <img>
-            <figcaption>match.team1.get_player2_name()</figcaption>
+            <figcaption>{{match.team1.get_player2_name()}}</figcaption>
         </figure>
-        match.score_e1
+        {{match.score_e1}}
         </li>
         
         <li>
-        match.team2.get_team_name()
+        {{match.team2.get_team_name()}}
         <figure>
             <img>
-            <figcaption>match.team2.get_player1_name()</figcaption>
+            <figcaption>{{match.team2.get_player1_name()}}</figcaption>
             <img>
-            <figcaption>match.team2.get_player2_name()</figcaption>
+            <figcaption>{{match.team2.get_player2_name()}}</figcaption>
         </figure>
-        match.score_e2
+        {{match.score_e2}}
         </li>
 
     </ul>
