adding ranking html and querying

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -9,10 +9,11 @@
     <th>
         <figure>
             <img>
-            <figcaption>user.get_full_name()</figcaption>
         </figure>
+        <h2>{{user.get_full_name()}}</h2>
+        <h3>{{user.get_nickname()}}</h3>
     </th>
-    <th>score</th>
+    <th>{{score}}</th>
 </tr>
 {% else %}
 There is no scores yet ! 
