Modifying layout.html to english and match to print only none-None value

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,10 +9,10 @@
 
 <nav>
     <ul>
-        <li><a href="{{ url_for('matchs')}}">Les matchs</a></li>
-        <li><a href="{{ url_for('ranking')}}">Classement</a></li>
-        <li><a href="{{ url_for('add_match')}}">Ajout match</a></li>
-        <li><a href="{{ url_for('add_player')}}">Ajout utilisateur</a></li>
+        <li><a href="{{ url_for('matchs')}}">Matchs</a></li>
+        <li><a href="{{ url_for('ranking')}}">Ranking</a></li>
+        <li><a href="{{ url_for('add_match')}}">Add a Match</a></li>
+        <li><a href="{{ url_for('add_player')}}">Add a player</a></li>
     </ul>
 </nav>
 
