--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -9,9 +9,11 @@
     <th>
         <figure>
             <img>
+            <figcaption>
+                <h2>{{user.get_full_name()}}</h2>
+                {% if user.get_nickname() %}<h3>{{user.get_nickname()}}</h3>{% endif %}
+            </figcaption>
         </figure>
-        <h2>{{user.get_full_name()}}</h2>
-        <h3>{{user.get_nickname()}}</h3>
     </th>
     <th>{{score}}</th>
 </tr>
