--- a/templates/match.html
+++ b/templates/match.html
@@ -9,25 +9,30 @@
         <li>{{match.date}}</li>
         
         <li>
-        {{match.team1.get_team_name()}}
+        {% if match.team1.get_team_name()%}<h2>{{match.team1.get_team_name()}}</h2>{% endif %}
         <figure>
             <img>
             <figcaption>{{match.team1.get_player1_name()}}</figcaption>
+            {% if match.team1.get_player2_name() %}
             <img>
             <figcaption>{{match.team1.get_player2_name()}}</figcaption>
+            {% endif %}
         </figure>
-        {{match.score_e1}}
+        <h3>{{match.score_e1}}</h3>
         </li>
         
         <li>
-        {{match.team2.get_team_name()}}
+            
+        {% if match.team2.get_team_name()%}<h2>{{match.team2.get_team_name()}}</h2>{% endif %}
         <figure>
             <img>
             <figcaption>{{match.team2.get_player1_name()}}</figcaption>
+            {% if match.team2.get_player2_name() %}
             <img>
             <figcaption>{{match.team2.get_player2_name()}}</figcaption>
+            {% endif %}
         </figure>
-        {{match.score_e2}}
+        <h3>{{match.score_e2}}</h3>
         </li>
 
     </ul>
