--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -4,19 +4,28 @@
 <form action="{{ url_for('new_match') }}" method=post class=add-entry>
     <dl>
           
-        <dt>Equipe 1:
-        <dd><input type=integer size=30 name=id_team1>
+        <dt>J1 Equipe 1:</dt>
+        <dd><input type=integer size=30 name=id_player11></dd>
         
-        <dt>Equipe 2:
-        <dd><input type=integer size=30 name=id_team2>
+        <dt>J2 Equipe 1:</dt>
+        <dd><input type=integer size=30 name=id_player12></dd>
         
-        <dt>Score Equipe 1:
-        <dd><input type=integer size=30 name=score_e1>
+        <dt>J1 Equipe 2:</dt>
+        <dd><input type=integer size=30 name=id_player21></dd>
         
-        <dt>Score Equipe 2:
-        <dd><input type=integer size=30 name=score_e2 >
+        <dt>J2 Equipe 2:</dt>
+        <dd><input type=integer size=30 name=id_player22></dd>
         
-        <dd><input type=submit value=Share>
+        <dt>Score Equipe 1:</dt>
+        <dd><input type=integer size=30 name=score_e1></dd>
+        
+        <dt>Score Equipe 2:</dt>
+        <dd><input type=integer size=30 name=score_e2 ></dd>
+        
+        <dt>Date du match</dt>
+        <dd><input type="date"  size=30 name=></dd>
+        
+        <dd><input type=submit value=Valider></dd>
     </dl>
 </form>
 
