--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -1,6 +1,11 @@
 {% extends "layout.html" %}
 {% block body %} 
 
+{% if error %}
+    <p class=error>
+        <strong>Error:</strong> {{ error }}
+{% endif %}
+
 <form action="{{ url_for('new_match') }}" method=post class=add-entry>
     <dl>
           
