Adding user working

--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -8,7 +8,7 @@
 <tr>
     <th>
         <figure>
-            <img>
+            <img src={{user.get_photo()}}>
             <figcaption>
                 <h2>
                     {{user.get_full_name()}}
