--- a/templates/add_player.html
+++ b/templates/add_player.html
@@ -7,7 +7,7 @@
 </strong>
 {% endif %}
 
-<form action="{{ url_for('add_player') }}" method=post class=add-entry>
+<form action="{{ url_for('add_player') }}" method=post class=add-entry enctype="multipart/form-data">
     <dl>
           
         <dt>Surname:</dt>
@@ -18,6 +18,9 @@
         
         <dt>Nickname</dt>
         <dd><input type=integer size=30 name=nickname></dd>
+        
+        <dt>Photo</dt>
+        <dd><input type=file size=30 name=photo></dd>
         
         <dd><input type=submit value=Create></dd>
     </dl>
