--- a/templates/match.html
+++ b/templates/match.html
@@ -19,12 +19,12 @@
             </h2>
             {% endif %}
             <figure>
-                <img>
+                <img src={{match.team1.get_photo_player1()}}>
                 <figcaption>
                     {{match.team1.get_player1_name()}}
                 </figcaption>
                 {% if match.team1.get_player2_name() %}
-                <img>
+                <img src={{match.team1.get_photo_player2()}}>
                 <figcaption>
                     {{match.team1.get_player2_name()}}
                 </figcaption>
@@ -42,12 +42,12 @@
             </h2>
             {% endif %}
             <figure>
-                <img>
+                <img src={{match.team2.get_photo_player1()}}>
                 <figcaption>
                     {{match.team2.get_player1_name()}}
                 </figcaption>
                 {% if match.team2.get_player2_name() %}
-                <img>
+                <img src={{match.team2.get_photo_player2()}}>
                 <figcaption>
                     {{match.team2.get_player2_name()}}
                 </figcaption>
