User select in Add Match

--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -10,16 +10,46 @@
     <dl>
           
         <dt>J1 Equipe 1:</dt>
-        <dd><input type=integer size=30 name=id_player11></dd>
+        
+         <dd>
+             <select name=id_player11
+            {% for user in users %}
+                <option value = user.id_user> {{user.name + ' ' + user.surname}} </option>
+            {% endfor %}
+            </select>
+        </dd>
+        
         
         <dt>J2 Equipe 1:</dt>
-        <dd><input type=integer size=30 name=id_player12></dd>
+        
+         <dd>
+             <select name=id_player12
+            {% for user in users %}
+                <option value = user.id_user> {{user.name + ' ' + user.surname}} </option>
+            {% endfor %}
+            </select>
+        </dd>
+        
         
         <dt>J1 Equipe 2:</dt>
-        <dd><input type=integer size=30 name=id_player21></dd>
+         <dd>
+             <select name=id_player21
+            {% for user in users %}
+                <option value = user.id_user> {{user.name + ' ' + user.surname}} </option>
+            {% endfor %}
+            </select>
+        </dd>
+        
         
         <dt>J2 Equipe 2:</dt>
-        <dd><input type=integer size=30 name=id_player22></dd>
+         <dd>
+             <select name=id_player22
+            {% for user in users %}
+                <option value = user.id_user> {{user.name + ' ' + user.surname}} </option>
+            {% endfor %}
+            </select>
+        </dd>
+        
         
         <dt>Score Equipe 1:</dt>
         <dd><input type=integer size=30 name=score_e1></dd>
