adding info when creating a match

--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -6,6 +6,11 @@
         <strong>Error:</strong> {{ error }}
 {% endif %}
 
+{% if success %}
+    <p class=error>
+        <strong>Info:</strong> {{ success }}
+{% endif %}
+
 <form action="{{ url_for('new_match') }}" method=post class=add-entry>
     <dl>
           
