if no player, no match

--- a/templates/add_match.html
+++ b/templates/add_match.html
@@ -7,10 +7,11 @@
 {% endif %}
 
 {% if success %}
-    <p class=error>
+    <p class=success>
         <strong>Info:</strong> {{ success }}
 {% endif %}
 
+{% if not user %}
 <form action="{{ url_for('new_match') }}" method=post class=add-entry>
     <dl>
           
@@ -67,5 +68,6 @@
         <dd><input type=submit value=Valider></dd>
     </dl>
 </form>
+{% endif %}
 
 {% endblock %}
