Adding tournament generation. Match.html okay for w3c

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
         <li><a href="{{ url_for('ranking')}}">Ranking</a></li>
         <li><a href="{{ url_for('add_match')}}">Add a Match</a></li>
         <li><a href="{{ url_for('add_player')}}">Add a player</a></li>
+        <li><a href="{{ url_for('tournament')}}">Tournament</a></li>
     </ul>
 </nav>
 
