--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,7 +2,7 @@
 {% block body %} 
 
 <h1>Ranking</h1>
-
+<a href="{{ url_for('ranking_graph')}}">Watch daily ranking evolution</a>
 <table>
 {% for user in users %}
 <tr>
