--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -8,7 +8,7 @@
 <tr>
     <th>
         <figure>
-            <img src={{user.get_photo()}}>
+            <img src={{user.photo}}>
             <figcaption>
                 
                 <h2>
@@ -19,17 +19,17 @@
                     {{user.get_full_name()}}
                 </h3>
                 
-                {% if user.get_nickname() %}
+                {% if user.nickname %}
                 <h4>
-                    {{user.get_nickname()}}
+                    {{user.nickname}}
                 </h4>
                 {% endif %}
                 
-                {% if user.get_number_of_matchs() != 0 %}
+                {% if user.number_of_match != 0 %}
                 <h4>
-                    {{user.get_nb_victories()}} 
+                    {{user.nb_victories}} 
                     
-                    {% if user.get_nb_victories()==1 %}
+                    {% if user.nb_victories==1 %}
                         Victory
                     {% else %}
                         Victories
@@ -39,9 +39,9 @@
                 
                 <h4>
                     
-                    {{user.get_nb_defeats()}}
+                    {{user.nb_defeats}}
                     
-                    {% if user.get_nb_defeats()==1 %}
+                    {% if user.nb_defeats==1 %}
                         Defeat
                     {% else %}
                         Defeats
@@ -50,7 +50,7 @@
                 
                 
                 <h4>
-                    Ratio : {{(user.get_nb_victories()/user.get_number_of_matchs())*100}} %
+                    Ratio : {{(user.nb_victories/user.number_of_match)*100}} %
                 </h4>
                 
                 {{ user.ratio_gauge.render()|safe }}
@@ -65,7 +65,7 @@
         </figure>
     </th>
     <th>
-        {{user.get_ranking()}}
+        {{user.ranking}}
     </th>
     
     <th>
