Delete get methods in Model

--- a/templates/match.html
+++ b/templates/match.html
@@ -14,14 +14,14 @@
         
         <li>
             <figure>
-                <img src={{match.player11.get_photo()}}>
+                <img src={{match.player11.photo}}>
                 <figcaption>
                     {{match.player11.get_full_name()}}
                 </figcaption>
             </figure>
             {% if match.player12 %}
             <figure>
-                <img src={{match.player12.get_photo()}}>
+                <img src={{match.player12.photo}}>
                 <figcaption>
                     {{match.player12.get_full_name()}}
                 </figcaption>
@@ -34,14 +34,14 @@
         
         <li>
             <figure>
-                  <img src={{match.player21.get_photo()}}>
+                  <img src={{match.player21.photo}}>
                 <figcaption>
                     {{match.player21.get_full_name()}}
                 </figcaption>
             </figure>
             {% if match.player22 %}
             <figure>
-                <img src={{match.player22.get_photo()}}>
+                <img src={{match.player22.photo}}>
                 <figcaption>
                     {{match.player22.get_full_name()}}
                 </figcaption>
