--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -18,12 +18,12 @@
     <ul>
         <li>
             <figure>
-                <img src={{team1[0].get_photo()}}>
+                <img src={{team1[0].photo}}>
                 <figcaption>
                     {{team1[0].get_full_name()}}
                 </figcaption>
                 <h3>{{team1[0].ranking}}</h3>
-                <img src={{team1[1].get_photo()}}>
+                <img src={{team1[1].photo}}>
                 <figcaption>
                     {{team1[1].get_full_name()}}
                 </figcaption>
@@ -33,12 +33,12 @@
         
         <li>
             <figure>
-                <img src={{team2[0].get_photo()}}>
+                <img src={{team2[0].photo}}>
                 <figcaption>
                     {{team2[0].get_full_name()}}
                 </figcaption>
                 <h3>{{team2[0].ranking}}</h3>
-                <img src={{team2[1].get_photo()}}>
+                <img src={{team2[1].photo}}>
                 <figcaption>
                     {{team2[1].get_full_name()}}
                 </figcaption>
