--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -2,7 +2,9 @@
 {% block body %} 
 
 <h1>Ranking</h1>
-<a href="{{ url_for('ranking_graph')}}">Watch daily ranking evolution</a>
+{% if users %}
+<a href="{{ url_for('ranking_graph')}}">Watch monthly ranking evolution</a>
+{% endif %}
 <table>
 {% for user in users %}
 <tr>
