--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -10,7 +10,7 @@
     {% endfor %}
     </select>
     {% endfor %}
-    <a href="{{ url_for('addOneTournament') }}">Add a player</a>
+    <a href="{{ url_for('add_one_tournament') }}">Add a player</a>
     
     <input type=submit value='Create Tournament'>
     
