gravatar mise en place

--- a/templates/add_player.html
+++ b/templates/add_player.html
@@ -19,8 +19,8 @@
         <label>Nickname</label>
         <input type=integer size=30 name=nickname>
         
-        <label>Photo</label>
-        <input type=file size=30 name=photo>
+        <label>Email gravatar</label>
+        <input type=string size=30 name=photo>
         
         <input type=submit value=Create>
 
