--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -10,7 +10,7 @@
 <tr>
     <th>
         <figure>
-            <img src={{user.photo}}>
+            <img src={{get_gravatar_url(user.photo)}}>
             <figcaption>
                 
                 <h2>
