--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -1,20 +1,9 @@
 {% extends "layout.html" %}
 {% block body %} 
 
-<form action="{{ url_for('tournament') }}" method=post class=add-entry>
-    
-    {% for i in range(nb_select) %}      
-     <select name=id_player{{loop.index}}>
-    {% for user in users %}
-        <option value = {{user.id_user}}> {{user.name + ' ' + user.surname}} </option>
-    {% endfor %}
-    </select>
-    {% endfor %}
-    <a href="{{ url_for('add_one_tournament') }}">Add a player</a>
-    
-    <input type=submit value='Create Tournament'>
-    
-</form>
+<main>
+  {{ form }}
+</main>
 
 <ul>
     {% for (team1,team2) in tournament %}
