--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -9,35 +9,53 @@
 <section>
     {% for (team1,team2) in tournament %}
     <ul>
-        <li>
+        <table>
             <figure>
-                <img src={{get_gravatar_url(team1[0].photo)}}>
-                <figcaption>
-                    {{team1[0].get_full_name()}}
-                </figcaption>
-                <h3>{{team1[0].ranking}}</h3>
-                <img src={{get_gravatar_url(team1[1].photo)}}>
-                <figcaption>
-                    {{team1[1].get_full_name()}}
-                </figcaption>
-                <h3>{{team1[1].ranking}}</h3>
+                <tr>
+                    <td>
+                        <img src={{get_gravatar_url(team1[0].photo)}}>
+                        <figcaption>
+                            {{team1[0].get_full_name()}}
+                        </figcaption>
+                    </td>
+                    <td>
+                        <img src={{get_gravatar_url(team1[1].photo)}}>
+                        <figcaption>
+                            {{team1[1].get_full_name()}}
+                        </figcaption>
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td>{{team1[0].ranking}}</td>
+                    <td>{{team1[1].ranking}}</td>
+                </tr>
+                
             </figure>
-        </li>
-        
-        <li>
+                
             <figure>
-                <img src={{get_gravatar_url(team2[0].photo)}}>
-                <figcaption>
-                    {{team2[0].get_full_name()}}
-                </figcaption>
-                <h3>{{team2[0].ranking}}</h3>
-                <img src={{get_gravatar_url(team2[1].photo)}}>
-                <figcaption>
-                    {{team2[1].get_full_name()}}
-                </figcaption>
-                <h3>{{team2[1].ranking}}</h3>
+                <tr>
+                    <td>
+                        <img src={{get_gravatar_url(team2[0].photo)}}>
+                        <figcaption>
+                            {{team2[0].get_full_name()}}
+                        </figcaption>
+                    </td>
+                    <td>
+                        <img src={{get_gravatar_url(team2[1].photo)}}>
+                        <figcaption>
+                            {{team2[1].get_full_name()}}
+                        </figcaption>
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td>{{team2[0].ranking}}</td>
+                    <td>{{team2[1].ranking}}</td>
+                </tr>
+                
             </figure>
-        </li>
+        </table>
     </ul>
     {% endfor %}
 </section>
