--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -1,63 +1,48 @@
 {% extends "layout.html" %}
 {% block body %} 
 
-
 <main>
   {{ form }}
 </main>
 
-<section>
-    {% for (team1,team2) in tournament %}
-    <ul>
-        <table>
-            <figure>
-                <tr>
-                    <td>
-                        <img src={{get_gravatar_url(team1[0].photo)}}>
-                        <figcaption>
-                            {{team1[0].get_full_name()}}
-                        </figcaption>
-                    </td>
-                    <td>
-                        <img src={{get_gravatar_url(team1[1].photo)}}>
-                        <figcaption>
-                            {{team1[1].get_full_name()}}
-                        </figcaption>
-                    </td>
-                </tr>
-                
-                <tr>
-                    <td>{{team1[0].ranking}}</td>
-                    <td>{{team1[1].ranking}}</td>
-                </tr>
-                
-            </figure>
-                
-            <figure>
-                <tr>
-                    <td>
-                        <img src={{get_gravatar_url(team2[0].photo)}}>
-                        <figcaption>
-                            {{team2[0].get_full_name()}}
-                        </figcaption>
-                    </td>
-                    <td>
-                        <img src={{get_gravatar_url(team2[1].photo)}}>
-                        <figcaption>
-                            {{team2[1].get_full_name()}}
-                        </figcaption>
-                    </td>
-                </tr>
-                
-                <tr>
-                    <td>{{team2[0].ranking}}</td>
-                    <td>{{team2[1].ranking}}</td>
-                </tr>
-                
-            </figure>
-        </table>
-    </ul>
-    {% endfor %}
-</section>
+<article>
+{% for (team1,team2) in tournament %}
+    <section>
+        <figure>
+            <h3>{{team1[0].ranking}}</h3>
+            <img src={{get_gravatar_url(team1[0].photo)}}>
+            <figcaption>
+                {{team1[0].get_full_name()}}
+            </figcaption>
+        </figure>
+
+        <figure>
+            <h3>{{team1[1].ranking}}</h3>
+            <img src={{get_gravatar_url(team1[1].photo)}}>
+            <figcaption>
+                {{team1[1].get_full_name()}}
+            </figcaption>
+        </figure>
+    </section>
+    
+    <section>
+        <figure>
+            <h3>{{team2[0].ranking}}</h3>
+            <img src={{get_gravatar_url(team2[0].photo)}}>
+            <figcaption>
+                {{team2[0].get_full_name()}}
+            </figcaption>
+        </figure>
+
+        <figure>
+            <h3>{{team2[1].ranking}}</h3>
+            <img src={{get_gravatar_url(team2[1].photo)}}>
+            <figcaption>
+                {{team2[1].get_full_name()}}
+            </figcaption>
+        </figure>
+    </section>
+{% endfor %}
+</article>
 
 {% endblock %}
