--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -34,7 +34,7 @@
             {% if user.number_of_match != 0 %}
             <td>{{user.nb_victories}}</td>
             <td>{{user.nb_defeats}}</td>
-            <td>{{(user.nb_victories/user.number_of_match)*100}}
+            <td>{{100*(user.nb_victories/user.number_of_match)| round(2)}}
             <img src="{{ url_for('svg_victory', id_player=user.id_user)}}"></img>
             </td>
             {% else %}
