--- a/templates/ranking_graph.html
+++ b/templates/ranking_graph.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block body %}
-    <svg>
-    {{ line_chart.render()|safe }}
-    </svg>
+
+    {{ line_chart|safe }}
+
+    <script type="text/javascript" src="http://kozea.github.com/pygal.js/javascripts/svg.jquery.js"></script>
+    <script type="text/javascript" src="http://kozea.github.com/pygal.js/2.0.x/pygal-tooltips.js"></script>
 {% endblock %}
